fixed a contrast issue with background and the note span style

--- a/styles/form.css
+++ b/styles/form.css
@@ -46,13 +46,13 @@ h1 {
 form {
     width: 100%; 
     max-width: 600px;
-    background-color: lightgrey;
+    background-color: rgb(232, 232, 232);
     padding: 1rem;
     border-radius: 1rem;
 }
 
 .note {
-    color: blue;
+    color: darkblue;
     font-size: .8rem;
     padding: 0 .5rem 0 .5rem;
 }
